# QA_GURU_15_homework

./: .env.example  .env.example   .gitignore  README.md  README.txt  config.py  conftest.py  pyproject.toml  pytest.ini  requirements.txt
pages/: chat_widget.py  main_page.py  mobile_jarvel_screen.py
resources/: test_file.docx
resources/schemas/: sync_messages_response.schema.json
tests/: constants.py  test_capabilities_texts.py  test_jarvel_chat.py  test_send_message.py  test_unsafe_geo_safety.py  test_upload_file_to_chat.py  test_voice_input.py  test_welcome_message.py
tests/api/: sync_api_helper.py  test_extremist_marker.py  test_mock_chat_api_schema.py  test_support_transfer_signal.py  test_transport_link_button.py  test_unsafe_geo_safety.py
tests/api/test_data/: extremist_marker_cases.py  support_transfer_cases.py  transport_link_cases.py  unsafe_geo_cases.py
tests/mobile/: test_jarvel_mobile.py
tests/ui/: test_jarvel_chat.py
utils/: attach.py
