[tool.poetry]
name = "qa-guru-15-homework"
version = "0.1.0"
description = "UI and API tests for tutu.ru and mock chat platform"
authors = ["guscha <guscha@tutu.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^9.0.2"
selene = "^2.0.0rc9"
selenium = "^4.35.0"
python-dotenv = "^1.1.1"
allure-pytest = "^2.15.0"
requests = "^2.32.5"
jsonschema = "^4.25.1"
Appium-Python-Client = "^5.3.1"

[tool.pytest.ini_options]
addopts = "--clean-alluredir"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s | %(levelname)s | %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "api: marks tests as API tests without browser setup",
    "geo_safety: marks tests as geo safety checks for forbidden locations",
    "mobile: marks tests as mobile tests running on BrowserStack App Automate"
]
filterwarnings = [
    "ignore::urllib3.exceptions.InsecureRequestWarning"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"